df-derive/tests/fail/138-fail-columnar-without-trait.stderr
error: `columnar = "..."` requires `trait = "..."`; overriding only `Columnar` would generate mixed runtime impls that do not satisfy either runtime's `ToDataFrameVec`
  --> tests/fail/138-fail-columnar-without-trait.rs:11:13
   |
11 | #[df_derive(columnar = "core::dataframe::Columnar")]
   |             ^^^^^^^^

error: `trait` and `columnar` overrides cannot mix the built-in dataframe runtime with a custom runtime; use the matching built-in `Columnar` path or provide a fully custom `trait` + `columnar` pair
  --> tests/fail/138-fail-columnar-without-trait.rs:19:5
   |
19 |     columnar = "core::dataframe::Columnar"
   |     ^^^^^^^^

error: `trait` override involved in the mixed runtime pair
  --> tests/fail/138-fail-columnar-without-trait.rs:18:5
   |
18 |     trait = "df_derive::dataframe::ToDataFrame",
   |     ^^^^^

error: `trait` and `columnar` overrides cannot mix the built-in dataframe runtime with a custom runtime; use the matching built-in `Columnar` path or provide a fully custom `trait` + `columnar` pair
  --> tests/fail/138-fail-columnar-without-trait.rs:28:5
   |
28 |     columnar = "custom_runtime::MyColumnarTrait"
   |     ^^^^^^^^

error: `trait` override involved in the mixed runtime pair
  --> tests/fail/138-fail-columnar-without-trait.rs:27:5
   |
27 |     trait = "df_derive::dataframe::ToDataFrame",
   |     ^^^^^

error: `trait` and `columnar` overrides cannot mix the built-in dataframe runtime with a custom runtime; use the matching built-in `Columnar` path or provide a fully custom `trait` + `columnar` pair
  --> tests/fail/138-fail-columnar-without-trait.rs:37:5
   |
37 |     columnar = "df_derive::dataframe::Columnar"
   |     ^^^^^^^^

error: `trait` override involved in the mixed runtime pair
  --> tests/fail/138-fail-columnar-without-trait.rs:36:5
   |
36 |     trait = "custom_runtime::MyToDataFrame",
   |     ^^^^^
